--- a/.github/workflows/sast.yaml
+++ b/.github/workflows/sast.yaml
@@ -27,7 +27,7 @@ jobs:
           -v $(pwd):/app \
           -v /var/run/docker.sock:/var/run/docker.sock \
           mixeway/scanner:latest \
-          --api-key YOUR_API_KEY \
-          --project-id YOUR_PROJECT_ID \
+          --api-key 67adc7c4-fe03-409e-bd08-760ad4d17146 \
+          --project-id 160 \
           --commit-id ${{ steps.vars.outputs.sha_short }} \
           --branch ${{ steps.vars.outputs.branch }}
